# cortex

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CURRENT_CONTEXT.md  DEV_CONTEXT.md  PROJECT_CONTEXT.md  README.md  init-project.sh  resume.bat  run.bat  screenshot.bat  start.bat
tools/funding-scanner/: .gitignore  AGENTS.md  alerts.py  backfill.py  config.py  dashboard_data.py  dashboard_page.py  db.py  deploy.py  exchanges.py  main.py  pyproject.toml  scanner.py  web.py
tools/heartbeat/: analyzer.py  config.py  formatter.py  main.py  pyproject.toml  sources.py
tools/heartbeat/tests/: test_analyzer.py  test_config.py  test_formatter.py  test_main.py  test_sources.py
tools/kwork-monitor/: .gitignore  autopilot.py  bot.py  check_profile.py  config.py  create_kwork.py  explore_form.py  fetch_antigravity.py  fetch_ref.py  fill_profile.py  find_title.py  gen_covers.py  main.py  open_kwork.py  pyproject.toml  render_covers.py  reply_bot.py  send_profile.py  test_step1.py
tools/kwork-monitor/covers/: cover_0.html  cover_1.html  cover_2.html
tools/metrics/: main.py  pyproject.toml
tools/metrics/tests/: test_metrics.py
tools/steam-sniper/: .gitignore  CODEX_TASK.md  build_image_cache.py  category.py  dashboard.html  db.py  deploy.py  deploy_quick.py  listings_snapshot.py  main.py  pyproject.toml  server.py  verify.sh
tools/steam-sniper/.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
tools/steam-sniper/.planning/phases/01-database-foundation-bot-refactor/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md
tools/steam-sniper/.planning/phases/02-api-server-collector/: 02-01-PLAN.md  02-01-SUMMARY.md
tools/steam-sniper/.planning/phases/03-dashboard-ui-charts/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md
tools/steam-sniper/.planning/phases/04-vps-deployment/: 04-01-PLAN.md  04-01-SUMMARY.md
tools/steam-sniper/.planning/phases/05-dashboard-split/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md
tools/steam-sniper/.planning/phases/06-category-parser-catalog-api/: 06-01-PLAN.md  06-01-SUMMARY.md
tools/steam-sniper/.planning/phases/07-dual-lists-db-api/: 07-01-PLAN.md  (+1 more)
tools/steam-sniper/.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  UI-REFERENCE.md
tools/steam-sniper/deploy/: nginx-steam-sniper.conf  steam-sniper-bot.service  steam-sniper-dashboard.service  steam-sniper-snapshot.service  steam-sniper-snapshot.timer
tools/steam-sniper/extension/: background.js  content.js  manifest.json  styles.css
tools/steam-sniper/scripts/: build_listings_snapshot.py  sync_listings.ps1
tools/steam-sniper/static/: manifest.json  sw.js
tools/steam-sniper/static/css/: styles.css
tools/steam-sniper/static/js/: alerts.js  cases.js  catalog.js  chart.js  events.js  item_detail.js  lists.js  main.js  modal.js  router.js  search.js  state.js  stats.js  theme.js  utils.js  watchlist.js
tools/steam-sniper/tests/: conftest.py  test_api.py  test_category.py  test_db.py  test_listings_snapshot.py
tools/tg-monitor/: README.md  auth.py  config.py  daily.py  digest.py  monitor.py  pyproject.toml
tools/tg-monitor/deploy/: cortex-daily.service  cortex-daily.timer  setup-vm.sh
(+153 files in other folders)
