[project]
name = "steam-sniper"
version = "0.1.0"
description = "CS2 skin price alert bot for Telegram — monitors lis-skins.com"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[job-queue]>=21.0",
    "python-dotenv>=1.0",
    "beartype>=0.19",
    "fastapi>=0.115",
    "ijson>=3.5.0",
    "uvicorn[standard]>=0.32",
    "paramiko>=3.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
