[project]
name = "cortex-tg-monitor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "telethon>=1.36.0",
    "google-genai>=1.0.0",
    "beartype>=0.18.0",
    "httpx>=0.27.0",
]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pyright>=1.1",
]
